syntax="proto3";
package TradingSystem.Core;
option csharp_namespace = "TradingSystem.Core";

service Service {
  rpc EnterOrder(OrderMsg) returns (ErrorCodeMsg) {}
}

message ErrorCodeMsg {
  int32 Value = 1;
}

message OrderMsg {
  int32 Action = 1;
  string Symbol = 2;
  int64 Id = 3;
  bool IsBuySide = 4;
  int64 Price = 5;
  int64 Size = 6;
  int32 UserId = 7;
  int32 Position = 8;
}
